// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceMenu should render data source aggregated view 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DataSourceMenu should render data source multi select component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DataSourceMenu should render data source selectable only with local cluster is hidden 1`] = `
<Fragment>
  <EuiHeaderLinks
    className="osdTopNavMenu myclass"
    data-test-subj="top-nav"
    gutterSize="xs"
  >
    <DataSourceSelectable
      disabled={false}
      fullWidth={true}
      hideLocalCluster={true}
      notifications={
        Object {
          "add": [MockFunction],
          "addDanger": [MockFunction],
          "addError": [MockFunction],
          "addInfo": [MockFunction],
          "addSuccess": [MockFunction],
          "addWarning": [MockFunction],
          "get$": [MockFunction],
          "remove": [MockFunction],
        }
      }
      onSelectedDataSource={[MockFunction]}
      savedObjectsClient={
        Object {
          "find": [MockFunction],
        }
      }
    />
  </EuiHeaderLinks>
</Fragment>
`;

exports[`DataSourceMenu should render data source selectable only with local cluster not hidden 1`] = `
<Fragment>
  <EuiHeaderLinks
    className="osdTopNavMenu myclass"
    data-test-subj="top-nav"
    gutterSize="xs"
  >
    <DataSourceSelectable
      disabled={false}
      fullWidth={true}
      hideLocalCluster={false}
      notifications={
        Object {
          "add": [MockFunction],
          "addDanger": [MockFunction],
          "addError": [MockFunction],
          "addInfo": [MockFunction],
          "addSuccess": [MockFunction],
          "addWarning": [MockFunction],
          "get$": [MockFunction],
          "remove": [MockFunction],
        }
      }
      onSelectedDataSource={[MockFunction]}
      savedObjectsClient={
        Object {
          "find": [MockFunction],
        }
      }
    />
  </EuiHeaderLinks>
</Fragment>
`;

exports[`DataSourceMenu should render data source view only 1`] = `
<Fragment>
  <EuiHeaderLinks
    className="osdTopNavMenu myclass"
    data-test-subj="top-nav"
    gutterSize="xs"
  >
    <DataSourceView
      fullWidth={true}
    />
  </EuiHeaderLinks>
</Fragment>
`;
